--- a/capitalia-inward-expansion/configs/jei/blacklist.cfg
+++ b/capitalia-inward-expansion/configs/jei/blacklist.cfg
@@ -288,3 +288,36 @@ deep_dark_regrowth:sculk_biter
 deep_dark_regrowth:sculk_exhaler
 deep_dark_regrowth:sculk_nest
 deep_dark_regrowth:infested_sculk
+fluid:experienceobelisk:raw_experience
+ceramicbucket:ceramic_bucket:{Damage:0,Fluid:{Amount:1000,FluidName:"experienceobelisk:raw_experience"}}
+additionaladditions:wrench
+extendedcrafting:recipe_maker:Datapack
+mechanicalmachinery:copper_sifted_ore
+mechanicalmachinery:iron_sifted_ore
+mechanicalmachinery:gold_sifted_ore
+mechanicalmachinery:diamond_sifted_ore
+mechanicalmachinery:emerald_sifted_ore
+mechanicalmachinery:nether_quartz_sifted_ore
+mechanicalmachinery:ancient_debris_sifted_ore
+mechanicalmachinery:lapis_lazuli_sifted_ore
+mechanicalmachinery:zinc_sifted_ore
+create_so:unrefined_lapis_lazuli
+adminshop:fluid_buyer
+hostilenetworks:data_model
+hostilenetworks:prediction
+hostilenetworks:twilight_prediction
+solarflux:efficiency_upgrade
+solarflux:transfer_rate_upgrade
+solarflux:capacity_upgrade
+solarflux:traversal_upgrade
+solarflux:dispersive_upgrade
+solarflux:block_charging_upgrade
+solarflux:furnace_upgrade
+solarflux:blazing_coating
+solarflux:emerald_glass
+solarflux:ender_glass
+solarflux:photovoltaic_cell_2
+solarflux:photovoltaic_cell_3
+solarflux:photovoltaic_cell_4
+solarflux:photovoltaic_cell_5
+solarflux:photovoltaic_cell_6
