--- a/capitalia-inward-expansion/configs/propertymodifier-common.toml
+++ b/capitalia-inward-expansion/configs/propertymodifier-common.toml
@@ -114,6 +114,10 @@
 		"additionaladditions:rose_gold_shovel" = 275
 		"additionaladditions:rose_gold_axe" = 275
 		"additionaladditions:rose_gold_hoe" = 275
+		"additionaladditions:rose_gold_helmet" = 387
+		"additionaladditions:rose_gold_chestplate" = 435
+		"additionaladditions:rose_gold_leggings" = 459
+		"additionaladditions:rose_gold_boots" = 339
 		"additionaladditions:gilded_netherite_sword" = 2050
 		"additionaladditions:gilded_netherite_pickaxe" = 2050
 		"additionaladditions:gilded_netherite_shovel" = 2050
@@ -163,6 +167,8 @@
 		"enlightened_end:tenebrium_shovel" = 2050
 		"enlightened_end:tenebrium_hoe" = 2050
 		"enlightened_end:tenebrium_axe" = 2050
+		"longfallboots:longfallboots" = 512
+		"quark:forgotten_hat" = 64
 
 	#Set the max stack size of an item. Only values between 2 and 64 are supported. Items that have durability cannot have this value altered. Example (without the leading #):
 	#"minecraft:ender_pearl" = 64
@@ -208,7 +214,7 @@
 		#"minecraft:golden_boots" = 1
 		[items.armor.toughness]
 			"additionaladditions:rose_gold_helmet" = 0
-			"additionaladditions:rose_gold_chestplate" = 0
+			"additionaladditions:rose_gold_chestplate" = 1
 			"additionaladditions:rose_gold_leggings" = 0
 			"additionaladditions:rose_gold_boots" = 0
 			"additionaladditions:gilded_netherite_helmet" = 3
