--- a/capitalia-inward-expansion/configs/quark-common.toml
+++ b/capitalia-inward-expansion/configs/quark-common.toml
@@ -201,7 +201,7 @@
 		"Ignore Anti Overlap" = false
 		"Replace Worldgen Chests" = true
 		"Enable Reverting Wooden Chests" = true
-		#Chests to put in each structure. The format per entry is "structure=chest", where "structure" is a structure ID, and "chest" is a block ID, which must correspond to a standard chest block.
+		#Chests to put in structures. It's preferred to use worldgen tags for this. The format per entry is "structure=chest", where "structure" is a structure ID, and "chest" is a block ID, which must correspond to a standard chest block.
 		"Structure Chests" = ["minecraft:village_plains=quark:oak_chest", "minecraft:igloo=quark:spruce_chest", "minecraft:village_snowy=quark:spruce_chest", "minecraft:village_taiga=quark:spruce_chest", "minecraft:desert_pyramid=quark:birch_chest", "minecraft:jungle_pyramid=quark:jungle_chest", "minecraft:village_desert=quark:jungle_chest", "minecraft:village_savanna=quark:acacia_chest", "minecraft:mansion=quark:dark_oak_chest", "minecraft:pillager_outpost=quark:dark_oak_chest", "minecraft:ruined_portal=quark:crimson_chest", "minecraft:ruined_portal_desert=quark:crimson_chest", "minecraft:ruined_portal_jungle=quark:crimson_chest", "minecraft:ruined_portal_mountain=quark:crimson_chest", "minecraft:ruined_portal_nether=quark:crimson_chest", "minecraft:ruined_portal_ocean=quark:crimson_chest", "minecraft:ruined_portal_swamp=quark:crimson_chest", "minecraft:bastion_remnant=quark:crimson_chest", "minecraft:fortress=quark:nether_brick_chest", "minecraft:end_city=quark:purpur_chest", "minecraft:ocean_ruin_cold=quark:prismarine_chest", "minecraft:ocean_ruin_warm=quark:prismarine_chest", "minecraft:ancient_city=quark:ancient_chest"]
 
 	[building.japanese_palette]
@@ -239,6 +239,8 @@
 		"Glass Item Frames Update Maps" = true
 		#The scale at which items render in the Glass Item Frame. To match the vanilla Item Frame size, set to 1.0
 		"Item Render Scale" = 1.5
+		#Set to true for faster map updates. Default is every 3s
+		"Glass Item Frames Update Maps Every Tick" = false
 
 	[building.compressed_blocks]
 		"Charcoal Block and Blaze Lantern Stay On Fire Forever" = true
@@ -530,7 +532,7 @@
 		"Hud On Top" = false
 
 [tweaks]
-	"Automatic Recipe Unlock" = true
+	"Automatic Recipe Unlock" = false
 	"Compasses Work Everywhere" = false
 	"Simple Harvest" = true
 	"Renewable Spore Blossoms" = true
@@ -772,6 +774,13 @@
 		"Ignore Anti Overlap" = false
 		"Enable Doors" = true
 		"Enable Fence Gates" = true
+
+	[tweaks.map_washing]
+		#This feature disables itself if any of the following mods are loaded: 
+		# - supplementaries
+		#This is done to prevent content overlap.
+		#You can turn this on to force the feature to be loaded even if the above mods are also loaded.
+		"Ignore Anti Overlap" = false
 
 [world]
 	"Fairy Rings" = true
@@ -1049,9 +1058,7 @@
 		[world.permafrost.generation_settings]
 			#Allowed values: [0,)
 			Rarity = 2
-			#Allowed values: [-64,320]
 			"Min Y Level" = 105
-			#Allowed values: [-64,320]
 			"Max Y Level" = 140
 			#Allowed values: [0,)
 			"Horizontal Size" = 100
@@ -1093,9 +1100,7 @@
 		[world.corundum.generation_settings]
 			#Allowed values: [0,)
 			Rarity = 400
-			#Allowed values: [-64,320]
 			"Min Y Level" = 0
-			#Allowed values: [-64,320]
 			"Max Y Level" = 64
 			#Allowed values: [0,)
 			"Horizontal Size" = 72
@@ -1164,9 +1169,7 @@
 			Enabled = true
 			#Allowed values: [0,)
 			Rarity = 4
-			#Allowed values: [-64,320]
 			"Min Y Level" = 20
-			#Allowed values: [-64,320]
 			"Max Y Level" = 80
 			#Allowed values: [0,)
 			"Horizontal Size" = 14
@@ -1195,9 +1198,7 @@
 			Enabled = true
 			#Allowed values: [0,)
 			Rarity = 4
-			#Allowed values: [-64,320]
 			"Min Y Level" = 20
-			#Allowed values: [-64,320]
 			"Max Y Level" = 80
 			#Allowed values: [0,)
 			"Horizontal Size" = 14
@@ -1226,9 +1227,7 @@
 			Enabled = true
 			#Allowed values: [0,)
 			Rarity = 4
-			#Allowed values: [-64,320]
 			"Min Y Level" = 20
-			#Allowed values: [-64,320]
 			"Max Y Level" = 80
 			#Allowed values: [0,)
 			"Horizontal Size" = 14
@@ -1257,9 +1256,7 @@
 			Enabled = true
 			#Allowed values: [0,)
 			Rarity = 4
-			#Allowed values: [-64,320]
 			"Min Y Level" = 20
-			#Allowed values: [-64,320]
 			"Max Y Level" = 80
 			#Allowed values: [0,)
 			"Horizontal Size" = 14
@@ -1289,9 +1286,7 @@
 			Enabled = true
 			#Allowed values: [0,)
 			Rarity = 100
-			#Allowed values: [-64,320]
 			"Min Y Level" = 58
-			#Allowed values: [-64,320]
 			"Max Y Level" = 62
 			#Allowed values: [0,)
 			"Horizontal Size" = 20
@@ -1545,6 +1540,7 @@
 	"Improved Tooltips" = true
 	"Back Button Keybind" = false
 	"Greener Grass" = true
+	"Buckets Show Inhabitants" = true
 
 	[client.chest_searching]
 
@@ -1631,6 +1627,16 @@
 			G = [0.0, 1.0, 0.22]
 			B = [0.0, 0.0, 1.22]
 
+	[client.camera]
+		#Date format that will be displayed in screenshots. Must be a valid one (i.e. MM/dd/yyyy)
+		"Date Format" = "MM/dd/yyyy"
+
+	[client.buckets_show_inhabitants]
+		"Show Axolotls" = true
+		"Show Crabs" = true
+		"Show Tropical Fish" = true
+		"Show Shiny Slime" = true
+
 [experimental]
 	"Game Nerfs" = false
 	"Narrator Readout" = false
@@ -1645,6 +1651,9 @@
 	"Enchantment Predicates" = false
 	"Spawner Replacer" = false
 	"Overlay Shader" = false
+	#Allows placing variant blocks automatically via a selector menu triggered from a keybind
+	"Variant Selector" = false
+	"Villager Rerolling Rework" = false
 
 	[experimental.game_nerfs]
 		#Makes Mending act like the Unmending mod
@@ -1670,6 +1679,11 @@
 		"Disable Mushroom Block Removal" = true
 		"Non Griefing Entities" = ["minecraft:creeper", "minecraft:enderman"]
 		"Elytra Allowed Dimensions" = ["minecraft:the_end"]
+		#Makes tripwire hooks unable to be duplicated
+		"Disable Tripwire Hook Dupe" = true
+		#Makes Mending II still work even if mending is nerfed.
+		#If you want Mending II, disable the sanity check on Ancient Tomes and add minecraft:mending to the tomes.
+		"No Nerf for Mending II" = false
 
 	[experimental.enchantments_begone]
 		"Enchantments To Begone" = []
@@ -1692,6 +1706,42 @@
 		#Some useful shaders include 'desaturate', 'oversaturate', 'bumpy'
 		#Colorblind simulation shaders are available in the form of 'deuteranopia', 'protanopia', 'tritanopia', and 'achromatopsia'
 		Shader = "none"
+
+	[experimental.variant_selector]
+		#Set this to true to automatically convert any dropped variant items into their originals. Do this ONLY if you intend to take control of every recipe via a data pack or equivalent, as this will introduce dupes otherwise.
+		"Convert Variant Items" = false
+		#Enable the hammer, allowing variants to be swapped between eachother, including the original block. Do this ONLY under the same circumstances as Convert Variant Items.
+		"Enable Hammer" = false
+		"Show Tooltip" = true
+
+		[experimental.variant_selector.variants]
+			#The list of all variant types available for players to use. Values are treated as suffixes to block IDs for scanning.
+			#Prefix any variant type with ! to make it show up for Manual Variants but not be automatically scanned for. (e.g. '!polish')
+			"Variant Types" = ["slab", "stairs", "fence", "fence_gate", "vertical_slab"]
+			#By default, only a mod's namespace is scanned for variants for its items (e.g. if coolmod adds coolmod:fun_block, it'll search only for coolmod:fun_block_stairs).
+			# Mods in this list are also scanned for variants if none are found in itself (e.g. if quark is in the list and coolmod:fun_block_stairs doesn't exist, it'll try to look for quark:fun_block_stairs next)
+			"Tested Mods" = ["quark"]
+			"Print Variant Map To Log" = false
+			#Format is 'alias=original' in each value (e.g. 'wall=fence' means that a failed search for, minecraft:cobblestone_fence will try cobblestone_wall next)
+			Aliases = ["wall=fence", "carpet=slab"]
+			#Ends of block IDs to try and remove when looking for variants. (e.g. minecraft:oak_planks goes into minecraft:oak_stairs, so we have to include '_planks' in this list for it to find them or else it'll only look for minecraft:oak_planks_stairs)
+			"Strip Candidates" = ["_planks", "_wool", "s"]
+			#Add manual variant overrides here, the format is 'type,block,output' (e.g. polish,minecraft:stone_bricks,minecraft:chiseled_stone_bricks). The type must be listed in Variant Types
+			"Manual Variants" = []
+			Blacklist = []
+
+	[experimental.villager_rerolling_rework]
+		#If enabled, the first two trades a villager generates for a profession will always be the same for a given villager.
+		#This prevents repeatedly placing down a job site block to reroll the villager's trades.
+		"Seed Initial Villager Trades" = true
+		#Set to 0 to disable the chance to reroll trades when restocking.
+		#It's possible for a trade to not restock even when the chance is 1. This happens when the rerolled trade is one the villager already has.
+		#This chance only guarantees a reroll will be attempted.
+		#Allowed values: [0,1]
+		"Chance To Reroll When Restocking" = 0.25
+		#Set to 0 to disable the chance to reroll trades when restocking. Set to -1 to allow unlimited rerolling.
+		#Trades earlier in the list will restock first.
+		"Maximum Restocks Per Day" = 3
 
 [oddities]
 	"Tiny Potato" = true
