Inward Expansion v1.2 files
lol i forgot to do this when i actually posted the update, 11/10

--- a/capitalia-inward-expansion/configs/jei/blacklist.cfg
+++ b/capitalia-inward-expansion/configs/jei/blacklist.cfg
@@ -292,16 +292,6 @@ fluid:experienceobelisk:raw_experience
 ceramicbucket:ceramic_bucket:{Damage:0,Fluid:{Amount:1000,FluidName:"experienceobelisk:raw_experience"}}
 additionaladditions:wrench
 extendedcrafting:recipe_maker:Datapack
-mechanicalmachinery:copper_sifted_ore
-mechanicalmachinery:iron_sifted_ore
-mechanicalmachinery:gold_sifted_ore
-mechanicalmachinery:diamond_sifted_ore
-mechanicalmachinery:emerald_sifted_ore
-mechanicalmachinery:nether_quartz_sifted_ore
-mechanicalmachinery:ancient_debris_sifted_ore
-mechanicalmachinery:lapis_lazuli_sifted_ore
-mechanicalmachinery:zinc_sifted_ore
-create_so:unrefined_lapis_lazuli
 adminshop:fluid_buyer
 hostilenetworks:data_model
 hostilenetworks:prediction
@@ -321,3 +311,17 @@ solarflux:photovoltaic_cell_3
 solarflux:photovoltaic_cell_4
 solarflux:photovoltaic_cell_5
 solarflux:photovoltaic_cell_6
+solarflux:sp_4
+solarflux:sp_5
+solarflux:sp_6
+solarflux:sp_8
+solarflux:sp_7
+additionaladditions:honeyed_apple
+additionaladditions:depth_meter
+additionaladditions:mysterious_bundle
+cave_enhancements:charged_lightning_anchor
+cave_dweller:cave_dweller_spawn_egg
+enlightened_end:corruptor_egg
+adminshop:permit
+createsifter:custom_mesh
+createsifter:advanced_custom_mesh
