--- a/cyborg-runner/configs/signedit.cfg
+++ b/cyborg-runner/configs/signedit.cfg
@@ -2,7 +2,7 @@
 
 signedit {
     # The player must hold this item to edit signs. Enter in the format modid:itemname. Default: 'minecraft:sign'. Use '*' to always allow editing regardless of held items.
-    S:editor=*
+    S:editor=minecraft:torch
 }
 
 
