Cyborg Runner v8.1 files
lol i meant to do this yesterday when i updated it.

--- a/cyborg-runner/configs/Universal Tweaks - Tweaks.cfg
+++ b/cyborg-runner/configs/Universal Tweaks - Tweaks.cfg
@@ -349,13 +349,13 @@ general {
             B:"[1] Rally Health Toggle"=true
 
             # Determines the risk time in ticks
-            I:"[2] Risk Time"=60
+            I:"[2] Risk Time"=100
 
             # Determines the chance to regain health in percent
-            I:"[3] Heal Chance"=80
+            I:"[3] Heal Chance"=75
 
             # Plays an indication sound effect when health is regained
-            B:"[4] Indication Sound"=false
+            B:"[4] Indication Sound"=true
         }
 
         sleeping {
