--- a/cyborg-runner/configs/reskillable.cfg
+++ b/cyborg-runner/configs/reskillable.cfg
@@ -46,7 +46,6 @@ openblocks:rope_ladder=reskillable:building|3
 openblocks:ladder=reskillable:building|4
 
 minecraft:bucket=reskillable:gathering|5
-byg:woodenmortar=reskillable:gathering|2
 ceramics:clay_bucket=reskillable:gathering|3
 glacidus:underground_bucket=reskillable:gathering|4
 natura:flint_and_blaze:*=reskillable:gathering|5
@@ -97,6 +96,8 @@ thermalfoundation:tool.bow_gold:*=reskillable:attack|3,reskillable:agility|3
 thermalfoundation:tool.bow_diamond:*=reskillable:attack|10,reskillable:agility|7
 redstonearsenal:tool.bow_flux:*=reskillable:attack|20,reskillable:agility|15
 extrautils2:compoundbow:*=reskillable:attack|20,reskillable:agility|15,reskillable:building|5
+longfallboots:longfallboots:*=reskillable:agility|7
+
 
 
 ceramics:clay_helmet:*=reskillable:defense|2
