--- a/cyborg-runner/configs/cofh/world/06_projectred.json
+++ b/cyborg-runner/configs/cofh/world/06_projectred.json
@@ -15,9 +15,9 @@
 				"cluster-size": 4
 			},
 			"cluster-count": 2,
-			"min-height": 1,
-			"max-height": 24,
-			"retrogen": "true",
+			"min-height": 0,
+			"max-height": 32,
+			"retrogen": false,
 			"biome": "all",
 			"dimension": {
 				"restriction": "blacklist",
@@ -44,7 +44,7 @@
 			"cluster-count": 4,
 			"min-height": 1,
 			"max-height": 64,
-			"retrogen": "true",
+			"retrogen": false,
 			"biome": "all",
 			"dimension": {
 				"restriction": "blacklist",
@@ -72,7 +72,7 @@
 			"cluster-count": 4,
 			"min-height": 1,
 			"max-height": 64,
-			"retrogen": "true",
+			"retrogen": false,
 			"biome": "all",
 			"dimension": {
 				"restriction": "blacklist",
@@ -100,7 +100,7 @@
 			"cluster-count": 4,
 			"min-height": 1,
 			"max-height": 64,
-			"retrogen": "true",
+			"retrogen": false,
 			"biome": "all",
 			"dimension": {
 				"restriction": "blacklist",
