--- a/vanilla-plus-plus/configs/vanillatweaks.toml
+++ b/vanilla-plus-plus/configs/vanillatweaks.toml
@@ -3,7 +3,7 @@ enableCraftingPad = true
 enableDynamite = true
 enableSlimeBucket = true
 enableFriedEgg = false
-enableStorageBlocks = true
+enableStorageBlocks = false
 enablePedestal = true
 dynamiteCooldown = 20
 dynamiteExplosionPower = 3
@@ -11,17 +11,17 @@ dynamiteExplosionPower = 3
 enableBlazing = true
 enableHops = true
 enableNimble = true
-enableSiphon = false
+enableSiphon = true
 enableVeteran = true
 enableVigor = true
 enableHoming = true
 blazingTreasureOnly = true
 hopsTreasureOnly = false
 nimbleTreasureOnly = false
-siphonTreasureOnly = true
+siphonTreasureOnly = false
 veteranTreasureOnly = false
-vigorTreasureOnly = false
-homingTreasureOnly = false
+vigorTreasureOnly = true
+homingTreasureOnly = true
 [loot]
 batLeatherDropChance = 0.5
 namedMobsDropNameTag = true
@@ -39,6 +39,8 @@ enableSilkSpawner = true
 realisticRelationship = true
 disableLavaPockets = true
 selfPlanting = false
+selfPlantingBlackList = []
+selfPlantingInterval = 100
 [recipe]
 betterChestRecipe = true
 betterRepeater = true
